--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<link href="bootstrap-5.1.3/css/bootstrap.min.css" rel="stylesheet">-->
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="bootstrap-5.1.3/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="style.css">
 
-    <title>Mercadinho Me Contrata</title>
+	<title>Mercadinho Me Contrata</title>
 </head>
 <body>
-    <div class="lado-esq">
-        <div class="login-box">
-
-        </div>
-    </div>
-    <div class="lado-dir">
-        <img class="logo-svg" src = "icons/logo.svg" alt="logo svg"/>
-    </div>
-    <script src="bootstrap-5.1.3/js/bootstrap.min.js"></script>
+	<div class="lado-esq">
+		<div class="login-box">
+			<form action="#">
+				<label><h2>Login</h2></label>
+				<br>
+				<input type="text" name="email" class="login-input" placeholder="E-mail">
+				<br>
+				<input type="password" name="senha" class="login-input" placeholder="Senha">
+				<br>
+				<input type="submit" value="Entrar">
+				<br>
+				<a href="#">Esqueci a senha</a>
+			</form>
+		</div>
+	</div>
+	<div class="lado-dir">
+		<img class="logo-svg" src = "icons/logo.svg" alt="logo svg"/>
+	</div>
+	<script src="bootstrap-5.1.3/js/bootstrap.min.js"></script>
 </body>
 </html>
